plugins {
	alias(libs.plugins.fabric.loom)
	alias(libs.plugins.yamlang)
}

version = "0.5.1-26.2"
group = "net.green_jab.nekomasfixed"

base {
	archivesName = project.name
}

loom {
	splitEnvironmentSourceSets()
	accessWidenerPath = file("src/main/resources/nekomasfixed.accesswidener")
	mods {
		register("nekomasfixed") {
			sourceSet(sourceSets["main"])
			sourceSet(sourceSets["client"])
		}
	}
	decompilers {
		vineflower {
			options.put("mark-corresponding-synthetics", "1")
		}
	}
	runs {
		datagen {
			client()
			name "Data Generation"
			vmArg "-Dfabric-api.datagen"
			vmArg "-Dfabric-api.datagen.output-dir=${file('src/main/generated')}"
			runDir "build/datagen"
		}
	}
}

sourceSets {
	main {
		resources {
			srcDirs += 'src/main/generated'
		}
	}
}

repositories {
	maven { url "https://maven.solo-studios.ca/releases/" }
	maven { url "https://maven.fabricmc.net/" }
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.terraformersmc.com/releases/" }
	mavenCentral()
}

dependencies {
	minecraft(libs.minecraft)
	implementation(libs.fabric.loader)
	implementation(libs.fabric.api)
	vineflowerDecompilerClasspath(libs.vineflower)
	api "me.shedaniel.cloth:cloth-config-fabric:26.2.155"
	api "com.terraformersmc:modmenu:20.0.1"
}

tasks.processResources {
	filesMatching("fabric.mod.json") {
		expand(
				"version": project.version,
				"fabric_api": libs.versions.fabric.api.get(),
				"minecraft": libs.versions.minecraft.get(),
		)
	}
}

yamlang {
	targetSourceSets = [sourceSets.main]
	inputDir.set("assets/nekomasfixed/lang")
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()
}

afterEvaluate {
	loom {
		runs {
			configureEach {
				vmArgs("-Xmx2G")
				property("fabric.development", "true")
				property("mixin.debug", "true")
				property("mixin.debug.export.decompile", "false")
				property("mixin.debug.verbose", "true")
				property("mixin.dumpTargetOnFailure", "true")
				property("mixin.hotSwap", "true")
				ideConfigGenerated(true)
			}
		}
	}
}